# d_final

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.s1  README.md  STANDARDS.md  STRUCTURE.md  app.py  batch  build.sh  build_app.sh  build_cuda.sh  cache_engine.sh  check.sh  config.py  debug.sh  down.sh  ds  ds_simple  frpc-restart.sh  frpc-start.sh  frpc-status.sh  frpc-stop.sh  golden-flow-test.sh  live_stream.c  live_stream_dual_infer.c  live_stream_multi.c  main.cpp  main.py  noexcuses.retard  nvidia_sample_reference.py  package-lock.json  package.json  pgie.txt  pipeline.py  pipeline.txt  pipeline_subprocess.py  (+21 more)
.scripts/: cache_engine.sh  check.sh  debug.sh
app/: Dockerfile  hello_multi.py  pgie_b8.txt
batch_inference/: Dockerfile  batch_app.py  build_rt.sh  build_rt_single.sh  deepstream_rt_src_add_del.py  deepstream_rt_src_add_del_singular.py  restart_stream.sh  restart_stream_single.sh  run_rt.sh  run_rt_single.sh
batch_streaming_v1/: API.md  CLEANUP_SUMMARY.md  Dockerfile  MILESTONE.md  README.md  STANDARDS.md  STRUCTURE.md  build.sh  pgie.txt  pipeline.txt  plan.md  rtsp_server.py  run.sh  sanity.sh
config/: README.md  bowling_yolo12n_batch.txt  config_infer_bowling.txt  config_infer_bowling_640.txt  config_infer_bowling_roboflow_1280.txt  config_infer_primary.txt  config_infer_yolo12x_1280.txt  config_infer_yolo12x_1280_batch3.txt  config_infer_yolov8.txt  config_infer_yoloworld.txt  (+50 more)
nvidia-sources/apps/cpp/deepstream_3d_action_recognition_app/: CMakeLists.txt  README  deepstream_3d_action_recognition.cpp
(+164 files in other folders)
